Fix covered buttons on slides#show after create
DIGSIG-213

--- a/app/assets/stylesheets/resources/slides.css.sass
+++ b/app/assets/stylesheets/resources/slides.css.sass
@@ -22,15 +22,12 @@ body.slides.show
 
     dt.thumbnail
       display: block
-      position: absolute
-      top: 60px
-      right: $default_padding
+      float: right
       width: $thumbnail_width
 
     dd.thumbnail
-      position: absolute
-      top: 90px
-      right: $default_padding    
+      float: right
+      clear: right
       width: $thumbnail_width
 
   dd.url a
